demo: updated design update 5 - fixed overflow in body tag

--- a/doc/assets/less/app/layouts/body.less
+++ b/doc/assets/less/app/layouts/body.less
@@ -4,6 +4,7 @@ body
     min-width   : 320px;
     font-family : @font-family-base;
     color       : @text-color;
+    overflow-x  : hidden;
 }
 
 a
